--- a/style.css
+++ b/style.css
@@ -206,19 +206,19 @@
 }
 
 .card .imgBx1{
-    background: url(./images/Vid.jpg);
+    background: url(./images/Vidit.jpg);
     background-size: cover;
     background-position:center;
 }
 
 .card .imgBx2{
-    background: url(./images/Viv.jpg);
+    background: url(./images/Vedant.jpg);
     background-size: cover;
     background-position:center;
 }
 
 .card .imgBx3{
-    background: url(./images/Ved.jpg);
+    background: url(./images/Pranav.jpg);
     background-size: cover;
     background-position:center;
 }
@@ -1205,3 +1205,4 @@
   .tranding-slider-control .swiper-pagination .swiper-pagination-bullet-active {
     background: var(--primary);
   }
+
