--- a/style.css
+++ b/style.css
@@ -215,6 +215,7 @@
     background: url(PC.jpg);
     background-size: cover;
     background-position:center;
+    padding-top: 20px;
 }
 
 .card .imgBx3{
@@ -1205,6 +1206,7 @@
   .tranding-slider-control .swiper-pagination .swiper-pagination-bullet-active {
     background: var(--primary);
   }
+
 
 
 
