--- a/style.css
+++ b/style.css
@@ -212,7 +212,7 @@
 }
 
 .card .imgBx2{
-    background: url(PC.jpg);
+    background: url(Pranav1.jpg);
     background-size: cover;
     background-position:center;
     padding-top: 20px;
@@ -1206,6 +1206,7 @@
   .tranding-slider-control .swiper-pagination .swiper-pagination-bullet-active {
     background: var(--primary);
   }
+
 
 
 
